--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<h1>Leetcode sheet
-
-<iframe src="https://docs.google.com/spreadsheets/d/1-tziPYyuh2UmI9P4yrW3I4qhLjxqHduMsPPAE8n-F1A/edit#gid=0" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
+<title>Leetcode Sorted</title>
+<iframe src="https://docs.google.com/spreadsheets/d/1-tziPYyuh2UmI9P4yrW3I4qhLjxqHduMsPPAE8n-F1A" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
